2021-11-04 Jan Kotanski <jan.kotanski@desy.de>
	* add setting rois coordinates with the command-line interface
	* tagged as 2.71.0

2021-10-18 Jan Kotanski <jan.kotanski@desy.de>
	* remove debug printouts
	* tagged as 2.70.3

2021-10-18 Jan Kotanski <jan.kotanski@desy.de>
	* fix for unclose socket
	* fix for showing/hiding gradient widgets
	* fix for setting LoopupTable in the multi Gradients mode
	* tagged as 2.70.2

2021-10-15 Jan Kotanski <jan.kotanski@desy.de>
	* fix for changing RGB/noRGB
	* tagged as 2.70.1

2021-10-15 Jan Kotanski <jan.kotanski@desy.de>
	* add motors tracking in the MoveMotor tool
	* tagged as 2.70.0

2021-10-12 Jan Kotanski <jan.kotanski@desy.de>
	* fix for gradients in the multi channel gradient color mode
	* tagged as 2.69.1

2021-10-11 Jan Kotanski <jan.kotanski@desy.de>
	* add a multi channel gradient color mode
	* tagged as 2.69.0

2021-09-29 Jan Kotanski <jan.kotanski@desy.de>
	* add a reset button to the MoveMotors tool
	* add nansum with nan result
	* add fix for setting RGB histograms from command-line
	* remove reseting RGB tools during the switch
	* tagged as 2.68.0

2021-09-28 Jan Kotanski <jan.kotanski@desy.de>
	* add WeightedSum filter
	* add help about RGB histograms
	* tagged as 2.67.0

2021-09-21 Jan Kotanski <jan.kotanski@desy.de>
	* make labels of intensity levels dynamic in the RGB mode
	* add setting intensity channel levels from command line interface
	* tagged as 2.66.2

2021-09-16 Jan Kotanski <jan.kotanski@desy.de>
	* convert maximal value of intensity level values to the default ones
	* add cloud hints mono/RGB radio buttons
	* fix setting intensity levels when histogram is off
	* tagged as 2.66.1

2021-09-14 Jan Kotanski <jan.kotanski@desy.de>
	* add RGB histograms for pyqtgraph
	* adopt specialized tools for RGB images
	* tagged as 2.66.0

2021-09-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix for passing results of the Maxima tool
	* fix deprecation warnings
	* tagged as 2.65.1
