@@ -1,5 +1,6 @@
-2021-11-04 Jan Kotanski <jan.kotanski@desy.de>
+2021-11-08 Jan Kotanski <jan.kotanski@desy.de>
 	* add setting rois coordinates with the command-line interface
+	* add fetching rois coordinates from OnlineAnalysis server when sardana is off
 	* tagged as 2.71.0
 
 2021-10-18 Jan Kotanski <jan.kotanski@desy.de>
